--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -53,7 +53,7 @@
         <%= @blog.body %>
       </p>
 
-      <a href="#">編集</a>
+      <%= link_to "編集" , edit_blog_path(@blog) %>
       <a href="#">削除</a>
 
       <div class="author-case clearfix">
